@@ -503,6 +503,46 @@ License along with this library.  If not, see <http://www.gnu.org/licenses/>.
 
 
 (function() {
+  angular.module('News').directive('newsTranslate', function() {
+    var directive;
+    return directive = {
+      restrict: 'E',
+      link: function(scope, element, attributes) {
+        var $element;
+        $element = $(element);
+        scope.translations || (scope.translations = scope.translations);
+        scope.translations[attributes.key] = $element.text();
+        return $element.remove();
+      }
+    };
+  });
+
+}).call(this);
+
+// Generated by CoffeeScript 1.6.3
+/*
+
+ownCloud - News
+
+@author Bernhard Posselt
+@copyright 2012 Bernhard Posselt dev@bernhard-posselt.com
+
+This library is free software; you can redistribute it and/or
+modify it under the terms of the GNU AFFERO GENERAL PUBLIC LICENSE
+License as published by the Free Software Foundation; either
+version 3 of the License, or any later version.
+
+This library is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU AFFERO GENERAL PUBLIC LICENSE for more details.
+
+You should have received a copy of the GNU Affero General Public
+License along with this library.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
+
+(function() {
   angular.module('News').directive('undoNotification', [
     '$rootScope', '$timeout', 'Config', function($rootScope, $timeout, Config) {
       return function(scope, elm, attr) {
@@ -646,9 +686,9 @@ License along with this library.  If not, see <http://www.gnu.org/licenses/>.
             count = _this._subscriptionsBusinessLayer.getUnreadCount(0);
             if (count > 0) {
               titleCount = _this._unreadCountFormatter(count);
-              title = 'News (' + titleCount + ') | ownCloud';
+              title = _this._$scope.translations.appName + ' (' + titleCount + ') | ownCloud';
             } else {
-              title = 'News | ownCloud';
+              title = _this._$scope.translations.appName + ' | ownCloud';
             }
             if (_this._$window.document.title !== title) {
               _this._$window.document.title = title;
